--- a/src/.prettierrc
+++ b/src/.prettierrc
@@ -2,5 +2,6 @@
   "useTabs": false,
   "endOfLine": "auto",
   "printWidth": 80,
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
