--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "build": {
     "env": {
-      "REACT_APP_API_KEY": "@REACT_APP_API_KEY"
+      "REACT_APP_API_KEY": "@movie_api_key"
     }
   }
 }
